Finsished Functions test

--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 532,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 533,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 363
+     "execution_count": 533
     }
    ],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 534,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +96,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 364
+     "execution_count": 534
     }
    ],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 535,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 536,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +142,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 366
+     "execution_count": 536
     }
    ],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 537,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +165,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 367
+     "execution_count": 537
     }
    ],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 538,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 539,
    "metadata": {
     "collapsed": true
    },
@@ -211,7 +211,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 369
+     "execution_count": 539
     }
    ],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 540,
    "metadata": {
     "collapsed": true
    },
@@ -234,7 +234,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 370
+     "execution_count": 540
     }
    ],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 541,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 371
+     "execution_count": 541
     }
    ],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 542,
    "metadata": {
     "collapsed": true
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 543,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +309,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 373
+     "execution_count": 543
     }
    ],
    "source": [
@@ -339,23 +339,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 544,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def master_yoda(text):\n",
-    "    pass"
+    "    new_text = text.split()[::-1]\n",
+    "    return \" \".join(new_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 545,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'home am I'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 545
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('I am home')"
@@ -363,11 +375,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 546,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'ready are We'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 546
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('We are ready')"
@@ -389,23 +412,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 547,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def almost_there(n):\n",
-    "    pass"
+    "    return abs(100-n) <= 10 or abs(200-n) <=10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 548,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 548
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(104)"
@@ -413,11 +447,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 549,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 549
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(150)"
@@ -425,11 +470,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 550,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 550
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(209)"
@@ -457,23 +513,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 551,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
-    "    pass"
+    "    for i in range(0,len(nums) -1):\n",
+    "        if nums[i] == 3 and nums[i+1] == 3:\n",
+    "            return True\n",
+    "    return False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 552,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 552
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 3])"
@@ -481,11 +551,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 553,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 553
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 1, 3])"
@@ -493,11 +574,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 554,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 554
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([3, 1, 3])"
@@ -514,23 +606,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 555,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def paper_doll(text):\n",
-    "    pass"
+    "    result = ''\n",
+    "    for char in text:\n",
+    "        result += char * 3\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 556,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'HHHeeellllllooo'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 556
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Hello')"
@@ -538,11 +644,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 557,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'MMMiiissssssiiissssssiiippppppiii'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 557
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Mississippi')"
@@ -560,23 +677,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 558,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def blackjack(a,b,c):\n",
-    "    pass"
+    "    hand = 0\n",
+    "    if a+b+c <= 21:\n",
+    "        hand = sum((a,b,c))\n",
+    "    elif a+b+c > 21 and a==11 or b ==11 or c==11:\n",
+    "        hand = hand = sum((a,b,c)) - 10\n",
+    "    else:\n",
+    "        hand = 'Bust'\n",
+    "    return hand\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 559,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 559
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(5,6,7)"
@@ -584,11 +719,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 560,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Bust'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 560
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,9)"
@@ -596,11 +742,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 561,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 561
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,11)"
@@ -619,19 +776,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 562,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
-    "    pass"
+    "    for num in arr:\n",
+    "        if num == 6:\n",
+    "            arr.pop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 563,
    "metadata": {
     "collapsed": true
    },
@@ -643,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 564,
    "metadata": {
     "collapsed": true
    },
@@ -655,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 565,
    "metadata": {
     "collapsed": true
    },
@@ -685,23 +844,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 566,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def spy_game(nums):\n",
-    "    pass"
+    "    # create a variable that is a list of 007 with an x for logic comparison\n",
+    "    code = [0,0,7,'x']\n",
+    "    for n in nums:\n",
+    "        if n == code[0]:\n",
+    "            code.pop(0)\n",
+    "    return len(code) == 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 567,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 567
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,2,4,0,0,7,5])"
@@ -709,11 +884,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 568,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 568
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,0,2,4,0,5,7])"
@@ -721,11 +907,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 569,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 569
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,7,2,0,4,5,0])"
@@ -743,24 +940,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 570,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    pass\n",
-    "                "
+    "    sieve = [True] * num\n",
+    "    for i in range(3,int(num**0.5)+1,2):\n",
+    "        if sieve[i]:\n",
+    "            sieve[i*i::2*i]=[False]*((num-i*i-1)//(2*i)+1)\n",
+    "    return [2] + [i for i in range(3,num,2) if sieve[i]]\n",
+    "                \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 571,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 3,\n",
+       " 5,\n",
+       " 7,\n",
+       " 11,\n",
+       " 13,\n",
+       " 17,\n",
+       " 19,\n",
+       " 23,\n",
+       " 29,\n",
+       " 31,\n",
+       " 37,\n",
+       " 41,\n",
+       " 43,\n",
+       " 47,\n",
+       " 53,\n",
+       " 59,\n",
+       " 61,\n",
+       " 67,\n",
+       " 71,\n",
+       " 73,\n",
+       " 79,\n",
+       " 83,\n",
+       " 89,\n",
+       " 97]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 571
+    }
+   ],
    "source": [
     "# Check\n",
     "count_primes(100)"
@@ -784,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 572,
    "metadata": {
     "collapsed": true
    },
@@ -796,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 573,
    "metadata": {
     "collapsed": true
    },
